--- a/gadd.html
+++ b/gadd.html
@@ -14,10 +14,10 @@
         select { background:white; }
         button { background:#4CAF50; color:white; border:none; cursor:pointer; font-weight:bold; }
         button:hover { background:#45a049; }
-        .new-category-input { display:none; } /* Hidden until "Add New" selected */
+        .new-category-input, .new-category-photo { display:none; margin-top:10px; }
         .items-section h2 { margin-top:40px; }
         .items-list { display:grid; gap:20px; margin-top:20px; }
-        .item-card { background:#f9f9f9; padding:20px; border-radius:12px; display:flex; gap:20px; box-shadow:0 2px 10px rgba(0,0,0,0.05); }
+        .item-card { background:#f9f9f9; padding:20px; border-radius:12px; display:flex; gap:20px; box-shadow:0 2px 10px rgba(0,0,0,0.05); align-items:center; }
         .item-card img { width:100px; height:100px; object-fit:cover; border-radius:10px; }
         .item-info { flex:1; }
         .item-info strong { font-size:18px; display:block; margin-bottom:5px; }
@@ -26,11 +26,12 @@
         .actions .update { background:#4CAF50; color:white; }
         .actions .delete { background:#ff4444; color:white; }
         .no-items { text-align:center; color:#999; padding:40px; font-size:18px; }
+        .category-preview { margin-top:10px; font-size:14px; color:#666; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Admin Portal</h1>
+        <h1>Admin Portal - Grocery Items</h1>
 
         <label>Admin Password:</label>
         <input type="password" id="adminPass" placeholder="Enter password (Brand)" required>
@@ -40,7 +41,16 @@
             <select id="categorySelect" required>
                 <option value="">Loading categories...</option>
             </select>
-            <input type="text" id="newCategory" class="new-category-input" placeholder="Type new category name">
+
+            <!-- New Category Name Input -->
+            <input type="text" id="newCategory" class="new-category-input" placeholder="Type new category name (e.g. Fruits)" required>
+
+            <!-- New Category Photo (only shown when adding new) -->
+            <div class="new-category-photo">
+                <label>Category Photo (Required for new category):</label>
+                <input type="file" id="categoryImage" accept="image/*" required>
+                <p class="category-preview">This photo will represent the new category in the app.</p>
+            </div>
 
             <label>Item Name:</label>
             <input type="text" id="name" placeholder="e.g. Fresh Apple 1kg" required>
@@ -58,6 +68,7 @@
             <h2>Manage Items</h2>
             <label>Select Category:</label>
             <select id="viewCategory" onchange="loadItems(this.value)"></select>
+
             <div id="itemsList" class="items-list">
                 <p class="no-items">Select a category above to view items</p>
             </div>
@@ -65,7 +76,7 @@
     </div>
 
     <script>
-        const ADMIN_PASS = "Brand"; // Your password
+        const ADMIN_PASS = "Brand"; // Change in production!
         let categories = [];
 
         async function loadCategories() {
@@ -77,14 +88,12 @@
                     const addSelect = document.getElementById("categorySelect");
                     const viewSelect = document.getElementById("viewCategory");
 
-                    // For add form
                     addSelect.innerHTML = `
                         <option value="">-- Select Existing or Add New --</option>
                         ${categories.map(c => `<option value="${c}">${c}</option>`).join("")}
                         <option value="__new__">+ Add New Category</option>
                     `;
 
-                    // For view/manage
                     viewSelect.innerHTML = `
                         <option value="">-- Choose Category --</option>
                         ${categories.map(c => `<option value="${c}">${c}</option>`).join("")}
@@ -97,39 +106,42 @@
                 }
             } catch (err) {
                 console.error("Failed to load categories:", err);
-                document.getElementById("categorySelect").innerHTML = "<option>Error loading</option>";
+                alert("Could not load categories.");
             }
         }
 
-        // Show/hide new category input
+        // Toggle new category fields
         document.getElementById("categorySelect").addEventListener("change", function() {
-            const newInput = document.getElementById("newCategory");
-            if (this.value === "__new__") {
-                newInput.style.display = "block";
-                newInput.required = true;
-                newInput.focus();
-            } else {
-                newInput.style.display = "none";
-                newInput.required = false;
-            }
+            const isNew = this.value === "__new__";
+            document.querySelector(".new-category-input").style.display = isNew ? "block" : "none";
+            document.querySelector(".new-category-photo").style.display = isNew ? "block" : "none";
+
+            // Required attributes
+            document.getElementById("newCategory").required = isNew;
+            document.getElementById("categoryImage").required = isNew;
         });
 
-        // Get final category value for submit
         function getSelectedCategory() {
             const select = document.getElementById("categorySelect");
             if (select.value === "__new__") {
-                return document.getElementById("newCategory").value.trim();
+                const newName = document.getElementById("newCategory").value.trim();
+                if (!newName) {
+                    alert("Please enter a new category name!");
+                    throw new Error("Missing category name");
+                }
+                return newName;
             }
             return select.value;
         }
 
         document.getElementById("addForm").addEventListener("submit", async (e) => {
             e.preventDefault();
+
             const pass = document.getElementById("adminPass").value;
             if (pass !== ADMIN_PASS) return alert("Wrong password!");
 
             const category = getSelectedCategory();
-            if (!category) return alert("Please select or enter a category!");
+            const isNewCategory = document.getElementById("categorySelect").value === "__new__";
 
             const formData = new FormData();
             formData.append("password", pass);
@@ -138,33 +150,108 @@
             formData.append("price", document.getElementById("price").value);
             formData.append("image", document.getElementById("image").files[0]);
 
+            // If new category → also send category image
+            if (isNewCategory) {
+                const catImageFile = document.getElementById("categoryImage").files[0];
+                if (!catImageFile) return alert("Category photo is required for new categories!");
+                formData.append("categoryImage", catImageFile);
+            }
+
             try {
-                const res = await fetch("/api/admin/add-item", { method: "POST", body: formData });
+                const res = await fetch("/api/admin/add-item", {
+                    method: "POST",
+                    body: formData
+                });
                 const data = await res.json();
+
                 if (data.success) {
-                    alert(`Item added to "${category}"!`);
-                    loadCategories(); // Refresh dropdowns
+                    alert(`Item "${document.getElementById("name").value}" added to "${category}"!`);
                     document.getElementById("addForm").reset();
-                    document.getElementById("newCategory").style.display = "none";
+                    document.querySelector(".new-category-input").style.display = "none";
+                    document.querySelector(".new-category-photo").style.display = "none";
+                    loadCategories(); // Refresh category list
+                    if (document.getElementById("viewCategory").value === category) {
+                        loadItems(category);
+                    }
                 } else {
-                    alert("Error: " + (data.message || "Failed"));
+                    alert("Error: " + (data.message || "Failed to add item"));
                 }
             } catch (err) {
-                alert("Network error");
+                console.error(err);
+                alert("Network error. Check console.");
             }
         });
 
+        // Placeholder for managing items (you already have this)
         async function loadItems(category) {
             if (!category) {
                 document.getElementById("itemsList").innerHTML = "<p class='no-items'>Select a category</p>";
                 return;
             }
-            // ... (same loadItems, updatePrice, deleteItem functions as before)
-            // Keep your existing loadItems code here
+            try {
+                const res = await fetch(`/api/items/${encodeURIComponent(category)}`);
+                const data = await res.json();
+                if (data.success && data.items.length > 0) {
+                    document.getElementById("itemsList").innerHTML = data.items.map(item => `
+                        <div class="item-card">
+                            <img src="${item.imageUrl}" alt="${item.name}">
+                            <div class="item-info">
+                                <strong>${item.name}</strong>
+                                <p>Category: ${item.category}</p>
+                                <input type="number" class="price-input" value="${item.price}" data-id="${item._id}">
+                                <div class="actions">
+                                    <button class="update" onclick="updatePrice('${item._id}')">Update Price</button>
+                                    <button class="delete" onclick="deleteItem('${item._id}')">Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                    `).join("");
+                } else {
+                    document.getElementById("itemsList").innerHTML = "<p class='no-items'>No items in this category</p>";
+                }
+            } catch (err) {
+                document.getElementById("itemsList").innerHTML = "<p class='no-items'>Error loading items</p>";
+            }
         }
 
-        async function updatePrice(id) { /* your code */ }
-        async function deleteItem(id) { /* your code */ }
+        async function updatePrice(id) {
+            const input = document.querySelector(`.price-input[data-id="${id}"]`);
+            const newPrice = input.value;
+            const pass = prompt("Enter admin password to update price:");
+            if (pass !== ADMIN_PASS) return alert("Wrong password!");
+
+            try {
+                const res = await fetch("/api/admin/edit-item", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ password: pass, itemId: id, price: newPrice })
+                });
+                const data = await res.json();
+                if (data.success) alert("Price updated!");
+                else alert("Failed: " + data.message);
+            } catch (err) {
+                alert("Error updating price");
+            }
+        }
+
+        async function deleteItem(id) {
+            if (!confirm("Delete this item permanently?")) return;
+            const pass = prompt("Enter admin password to delete:");
+            if (pass !== ADMIN_PASS) return alert("Wrong password!");
+
+            try {
+                const res = await fetch(`/api/admin/delete-item/${id}?password=${pass}`, { method: "DELETE" });
+                const data = await res.json();
+                if (data.success) {
+                    alert("Item deleted!");
+                    loadItems(document.getElementById("viewCategory").value);
+                } else {
+                    alert("Delete failed");
+                }
+            } catch (err) {
+                alert("Error deleting item");
+            }
+        }
 
         window.onload = loadCategories;
     </script>
