--- a/gitems.html
+++ b/gitems.html
@@ -5,19 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery Items</title>
     <style>
-        body { font-family: Arial, sans-serif; background:#f8f8f8; margin:0; padding:0; }
-        .header { position:sticky; top:0; background:white; padding:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10; }
+        body { 
+            font-family: Arial, sans-serif; 
+            background:#f8f8f8; 
+            margin:0; 
+            padding:0; 
+            padding-bottom: 90px; /* Space for cart bar */
+        }
+        .header { 
+            position:sticky; top:0; background:white; padding:15px; 
+            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10; 
+        }
         .back { font-size:28px; cursor:pointer; color:#4CAF50; }
         .title { font-size:20px; font-weight:bold; flex:1; }
         .cart-icon { font-size:24px; position:relative; cursor:pointer; }
-        .cart-count { position:absolute; top:-8px; right:-8px; background:#ff4444; color:white; font-size:12px; width:20px; height:20px; border-radius:50%; display:flex; align-items:center; justify-content:center; }
-        .grid { display:grid; grid-template-columns:repeat(2,1fr); gap:15px; padding:20px; padding-bottom:100px; }
-        .item { background:white; border-radius:12px; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,0.1); position:relative; }
+        .cart-count { 
+            position:absolute; top:-8px; right:-8px; background:#ff4444; color:white; 
+            font-size:12px; width:20px; height:20px; border-radius:50%; 
+            display:flex; align-items:center; justify-content:center; 
+        }
+        .grid { 
+            display:grid; grid-template-columns:repeat(2,1fr); gap:15px; 
+            padding:20px; 
+        }
+        .item { 
+            background:white; border-radius:12px; overflow:hidden; 
+            box-shadow:0 4px 10px rgba(0,0,0,0.1); position:relative; 
+        }
         .item img { width:100%; height:140px; object-fit:cover; }
         .info { padding:12px; }
         .name { font-size:14px; font-weight:600; margin-bottom:5px; }
         .price { font-size:16px; color:#4CAF50; font-weight:bold; }
-        .add-btn { position:absolute; bottom:8px; right:8px; background:#4CAF50; color:white; border:none; width:40px; height:40px; border-radius:50%; font-size:20px; cursor:pointer; box-shadow:0 4px 10px rgba(76,175,80,0.3); }
+        .add-btn { 
+            position:absolute; bottom:8px; right:8px; background:#4CAF50; color:white; 
+            border:none; width:40px; height:40px; border-radius:50%; font-size:20px; 
+            cursor:pointer; box-shadow:0 4px 10px rgba(76,175,80,0.3); 
+        }
+
+        /* Bottom Cart Bar */
+        .bottom-cart-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: white;
+            padding: 14px 20px;
+            box-shadow: 0 -4px 15px rgba(0,0,0,0.12);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-top: 1px solid #eee;
+            transform: translateY(100%);
+            transition: transform 0.35s ease;
+            z-index: 100;
+        }
+        .bottom-cart-bar.visible {
+            transform: translateY(0);
+        }
+        .cart-summary {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+        .cart-items-text {
+            font-weight: bold;
+            color: #333;
+        }
+        .cart-total-price {
+            font-size: 18px;
+            font-weight: bold;
+            color: #4CAF50;
+        }
+        .view-cart-btn {
+            background: #4CAF50;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 30px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(76,175,80,0.3);
+        }
+        .view-cart-btn:hover {
+            background: #43a047;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +100,17 @@
             🛒 <span class="cart-count" id="cartCount">0</span>
         </div>
     </div>
+
     <div class="grid" id="itemsGrid"></div>
+
+    <!-- Bottom Cart Bar -->
+    <div class="bottom-cart-bar" id="bottomCartBar">
+        <div class="cart-summary">
+            <span class="cart-items-text" id="cartItemsText">1 Item</span>
+            <span class="cart-total-price" id="cartTotalPrice">₹0</span>
+        </div>
+        <button class="view-cart-btn" onclick="window.location='gcart.html'">View Cart</button>
+    </div>
 
     <script>
         let cart = JSON.parse(localStorage.getItem('cart') || '[]');
@@ -37,39 +119,65 @@
             const category = localStorage.getItem('selectedCategory') || 'Fruits & Vegetables';
             document.getElementById('categoryName').textContent = category;
 
-            const res = await fetch(`/api/items/${encodeURIComponent(category)}`);
-            const data = await res.json();
+            try {
+                const res = await fetch(`/api/items/${encodeURIComponent(category)}`);
+                const data = await res.json();
+                const items = data.success ? data.items : [];
 
-            const items = data.success ? data.items : [];
-            const grid = document.getElementById('itemsGrid');
-            grid.innerHTML = items.map((item, i) => `
-                <div class="item">
-                    <img src="${item.imageUrl}" alt="${item.name}" loading="lazy" onerror="this.src='https://via.placeholder.com/300x140?text=No+Image'">
-                    <div class="info">
-                        <div class="name">${item.name}</div>
-                        <div class="price">₹${item.price}</div>
+                const grid = document.getElementById('itemsGrid');
+                grid.innerHTML = items.map(item => `
+                    <div class="item">
+                        <img src="${item.imageUrl}" alt="${item.name}" loading="lazy" 
+                             onerror="this.src='https://via.placeholder.com/300x140?text=No+Image'">
+                        <div class="info">
+                            <div class="name">${item.name}</div>
+                            <div class="price">₹${item.price}</div>
+                        </div>
+                        <button class="add-btn" onclick="addToCart('${item._id}', '${item.name.replace(/'/g, "\\'")}', ${item.price}, '${item.imageUrl}')">+</button>
                     </div>
-                    <button class="add-btn" onclick="addToCart('${item._id}', '${item.name}', ${item.price}, '${item.imageUrl}')">+</button>
-                </div>
-            `).join('');
+                `).join('');
 
-            updateCartCount();
+                updateCartDisplay();
+            } catch (err) {
+                document.getElementById('itemsGrid').innerHTML = "<div style='grid-column:1/-1;text-align:center;padding:40px;color:#999;'>Error loading items</div>";
+            }
         }
 
         function addToCart(id, name, price, img) {
             const existing = cart.find(c => c.id === id);
-            if (existing) existing.qty++;
-            else cart.push({ id, name, price, img, qty: 1 });
+            if (existing) {
+                existing.qty++;
+            } else {
+                cart.push({ id, name, price, img, qty: 1 });
+            }
             localStorage.setItem('cart', JSON.stringify(cart));
-            updateCartCount();
+            updateCartDisplay();
         }
 
-        function updateCartCount() {
-            const total = cart.reduce((sum, item) => sum + item.qty, 0);
-            document.getElementById('cartCount').textContent = total || 0;
+        function updateCartDisplay() {
+            const totalItems = cart.reduce((sum, item) => sum + item.qty, 0);
+            const totalPrice = cart.reduce((sum, item) => sum + (item.price * item.qty), 0);
+
+            // Update header cart count
+            document.getElementById('cartCount').textContent = totalItems || 0;
+
+            // Update bottom cart bar
+            const cartBar = document.getElementById('bottomCartBar');
+            if (totalItems > 0) {
+                cartBar.classList.add('visible');
+                document.getElementById('cartItemsText').textContent = 
+                    totalItems === 1 ? "1 Item" : `${totalItems} Items`;
+                document.getElementById('cartTotalPrice').textContent = `₹${totalPrice}`;
+            } else {
+                cartBar.classList.remove('visible');
+            }
         }
 
-        window.onload = loadItems;
+        // Initial load
+        window.onload = () => {
+            loadItems();
+            updateCartDisplay();
+        };
     </script>
 </body>
 </html>
